# neuromorphic-sleep-staging-pipeline-project

./: .gitignore  CHANGELOG.md  COMPLETE_PROJECT_REPORT.md  CONTRIBUTING.md  CONTRIBUTOR_ISSUES.md  EXECUTION_SUMMARY.md  EXPORT_TFLITE.md  FUNDING.yml  IMPLEMENTATION_COMPLETE.txt  INTERMEDIATE_ADVANCED_ISSUES.md  LICENSE  PART_5_EXPORT_DEPLOYMENT_GUIDE.md  PHASE2_STATUS.md  QUICK_START.md  README.md  THIS_EXECUTION_SUMMARY.md  THIS_WEEK_PLAN.md  create_issues.ps1  final_report.py  neuromorphic_sleep_stage_scoring.md  phase4_export_simple.py  pyproject.toml  requirements.txt  sleep_stage_build_guide.html  train.py  train_phase2.py  train_seq60.bat
data/manifests/: sleep_edf_full.csv  sleep_edf_quick.csv
firmware/include/: sleep_inference.h
firmware/src/: main.cpp  student_model_data.cc
scripts/: __init__.py  bin_to_c_array.py  download_sleep_edf.py  download_sleep_edf_mne.py  export_to_tflite.py  export_validated.py  install_ai_edge_torch.py  orchestrate_phases_3_4.py  run_full_program.py  status_dashboard.py  validate_int8.py  validate_int8_v2.py
src/sleep_staging/: __init__.py  augmentation.py  benchmark.py  cli.py  compress.py  config.py  data.py  distill.py  download  eeg-sleep-stage-dsp-implementation.ipynb  evaluate.py  export.py  losses.py  models.py  pipeline.py  preprocess.py  train.py
